--- a/src/blocks/core/post-comments-form.scss
+++ b/src/blocks/core/post-comments-form.scss
@@ -55,4 +55,10 @@
         border: var(--wp--custom--border--default);
         font-size: var(--wp--preset--font-size--small);
     }
+
+    // For when Akismet is active. 
+    .akismet_comment_form_privacy_notice {
+        font-size: var(--wp--preset--font-size--small);
+        margin-top: var(--wp--preset--spacing--medium);
+    }
 }
