--- a/templates/search.html
+++ b/templates/search.html
@@ -7,7 +7,7 @@
 <!-- wp:search {"label":"Search","showLabel":false,"buttonText":"New Search"} /--></div>
 <!-- /wp:group -->
 
-<!-- wp:query {"queryId":7,"query":{"perPage":"4","pages":"0","offset":"0","postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false},"displayLayout":{"type":"flex","columns":2},"align":"wide","className":"is-style-2x-gap"} -->
+<!-- wp:query {"queryId":7,"query":{"perPage":"4","pages":"0","offset":"0","postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"displayLayout":{"type":"flex","columns":2},"align":"wide","className":"is-style-2x-gap"} -->
 <div class="wp-block-query alignwide is-style-2x-gap"><!-- wp:post-template -->
 <!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|large","right":"var:preset|spacing|x-large","bottom":"var:preset|spacing|large","left":"var:preset|spacing|x-large"}}},"backgroundColor":"white","className":"is-style-hover-box"} -->
 <div class="wp-block-group is-style-hover-box has-white-background-color has-background" style="padding-top:var(--wp--preset--spacing--large);padding-right:var(--wp--preset--spacing--x-large);padding-bottom:var(--wp--preset--spacing--large);padding-left:var(--wp--preset--spacing--x-large)"><!-- wp:group -->
